# ai-tax-document-extraction

./: .envrc  .flake8  .gitignore  Makefile  README.md  check_paths.py  cli.py  main.py  pyproject.toml  toggle.py
data/snapshot/: 1099_div_field_descriptions.csv  1099_int_field_descriptions.csv  category_descriptions.csv  w2_field_descriptions.csv
data/wulters/: 2023 I 2017-Dividends (1099-DIV)-Dividends (IRS 1099-DIV)_Dividends.xls  2023 I 2017-Interest (1099-INT)-Interest (IRS 1099-INT)_Interest.xls  2023 I 2017-Wages, Salaries and Tips (W-2)-Wages and Salaries (IRS W-2)_Wages and Salaries.xls  2023 I-Sch D _ 4797 _ 4684 - Gains and Losses (1099-B, 1099-S, 2439)-Capital Gains and Losses_Capital Gains and Losses.xls  K12023F.xls  K12023P.xls  K12023S.xls
taxdocs/: __init__.py  azure.py  categorize.py  constants.py  extract.py  image.py  ocr.py  types.py  utils.py
taxdocs/cli/: folder.py  utils.py
taxdocs/docs/: personal_1099_b.py  personal_1099_div.py  personal_1099_int.py  personal_w2.py
taxdocs/outputs/wulters/: __init__.py  describe.py
templates/: download_options.html  status.html  success.html
templates/prompts/: 1099.j2
